--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "128": "icons/icon128.png"
   },
 
-  "permissions": ["storage"],
+  "permissions": ["storage", "identity"],
 
   "host_permissions": [
     "https://github.com/*",
